--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,14 @@ endif()
 add_library(moptim 
 src/Cost.cc)
 target_include_directories(moptim PUBLIC include)
+target_link_libraries(moptim Eigen3::Eigen)
 
 include(CTest)
 if(BUILD_TESTING)
 find_package(GTest REQUIRED)
 add_executable(simple_test test/simple.cc)
+add_executable(simple_point2 test/simple_point2.cc)
 target_link_libraries(simple_test moptim gtest)
+target_link_libraries(simple_point2 moptim gtest)
 gtest_discover_tests(simple_test)
 endif()
