--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_executable(moptim_tests
   test/test_simple_model.cc
   test/test_curve_fitting.cc
   test/test_powell.cc
-  # test/test_2dtransform.cc
+  test/test_2dtransform.cc
 )
 target_link_libraries(moptim_tests moptim gtest)
 gtest_discover_tests(moptim_tests)
