--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(utils
-ILog.cc
-ConsoleLogger.cc)
+    ILog.cc
+    ConsoleLogger.cc
+    Timer.cc)
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
