Refactor project structure and enhance testing capabilities
- Removed unnecessary VSCode settings file.
- Updated CMakeLists.txt to include TBB and link libraries for tests.
- Added new executable for NIST tests and included additional source files.
- Improved jacobian function return type in SimpleModel.
- Introduced AnalyticalCost class for better cost function handling.
- Enhanced test cases for Kirby2 with updated expectations.

--- a/test/nist/CMakeLists.txt
+++ b/test/nist/CMakeLists.txt
@@ -1,3 +1,7 @@
-link_libraries(moptim gtest)
-add_executable(kirby2 kirby2.cc)
+link_libraries(moptim gtest gtest_main)
+
+add_executable(nist
+ chwirut1.cc
+ kirby2.cc
+ nelson.cc)
 
