improved timer added 2d scan data refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ endif()
 add_subdirectory(utils)
 
 add_library(moptim 
-  src/Cost.cc
   src/GaussNewton.cc
   src/LevenbergMarquardt.cc)
 target_include_directories(moptim PUBLIC include)
@@ -32,17 +31,5 @@ target_link_libraries(moptim utils Eigen3::Eigen tbb)
 
 include(CTest)
 if(BUILD_TESTING)
-find_package(GTest REQUIRED)
-add_executable(moptim_tests
-  test/test_main.cc
-  test/test_simple_model.cc
-  test/test_curve_fitting.cc
-  test/test_powell.cc
-  test/test_rosenbrock.cc
-  test/test_2dtransform.cc
-  test/test_cost.cc
-)
-add_subdirectory(test/nist)
-target_link_libraries(moptim_tests moptim gtest)
-gtest_discover_tests(moptim_tests)
+add_subdirectory(test)
 endif()
