improved cmake options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,31 @@
 cmake_minimum_required(VERSION 3.20)
 project(moptim)
 set(CMAKE_CXX_STANDARD 20)
+
+option(USE_CLANG_TIDY "Enable clang-tidy" ON)
+option(FORMAT_CODE "Code formatter" OFF)
+if(USE_CLANG_TIDY)
 set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
+else()
+set(CMAKE_CXX_CLANG_TIDY "")
+endif()
 
 find_package(TBB REQUIRED)
 find_package(Eigen3 REQUIRED)
-find_program(FORMATTER clang-format)
 
-# add_compile_options("-march=native")
-
-if(FORMATTER)
-  message(STATUS "Code formatter found.")
-  file(GLOB_RECURSE SRC_FILES
-    ${CMAKE_SOURCE_DIR}/src/*.cc
-    ${CMAKE_SOURCE_DIR}/include/*.hh
-    ${CMAKE_SOURCE_DIR}/test/*.cc
-    ${CMAKE_SOURCE_DIR}/utils/*.cc
-    ${CMAKE_SOURCE_DIR}/utils/*.hh)
-  add_custom_target(code-format ALL
-  clang-format -i ${SRC_FILES})
+if(FORMAT_CODE)
+  find_program(FORMATTER clang-format)
+  if(FORMATTER)
+    message(STATUS "Code formatter found.")
+    file(GLOB_RECURSE SRC_FILES
+      ${CMAKE_SOURCE_DIR}/src/*.cc
+      ${CMAKE_SOURCE_DIR}/include/*.hh
+      ${CMAKE_SOURCE_DIR}/test/*.cc
+      ${CMAKE_SOURCE_DIR}/utils/*.cc
+      ${CMAKE_SOURCE_DIR}/utils/*.hh)
+    add_custom_target(code-format ALL
+    clang-format -i ${SRC_FILES})
+  endif()
 endif()
 
 add_subdirectory(utils)
