fixed residual squared function  on sycl device

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-FROM mdnf1992/sycl-dev 
+# Update platform accordingly
+FROM --platform=linux/arm64 mdnf1992/sycl-dev 
 
 RUN apt-get update && apt-get install -y libgtest-dev clang-tidy clang-format && \
     apt-get clean && apt-get autoremove && \
