--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(Eigen3 REQUIRED)
 add_subdirectory(utils)
 
 add_library(moptim 
+  src/NumericalCost2.cc
   src/GaussNewton.cc
   src/LevenbergMarquardt.cc)
 target_compile_options(moptim PUBLIC --acpp-targets=generic)
