wip: sycl vs normal jacobian inconsistent

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,7 +25,7 @@ gtest_discover_tests(moptim_tests)
 
 add_executable(moptim_sycl_tests
   sycl/test_sycl_cost.cc
-  # sycl/test_sycl_transform3d.cc
+  sycl/test_sycl_transform3d.cc
 )
 target_include_directories(moptim_sycl_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(moptim_sycl_tests gtest gtest_main)
