--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,17 @@
     "build":{
         "dockerfile": "Dockerfile"
     },
-    "features": {
-    "desktop-lite": {
-        "password": "vscode",
-        "webPort": "6080",
-        "vncPort": "5901"
-    }
-    },
-    "forwardPorts": [
-        5901,
-        6080
-    ],
+    // "features": {
+    // "desktop-lite": {
+    //     "password": "vscode",
+    //     "webPort": "6080",
+    //     "vncPort": "5901"
+    // }
+    // },
+    // "forwardPorts": [
+    //     5901,
+    //     6080
+    // ],
     "customizations": {
         "vscode": {
             "extensions": [
@@ -26,7 +26,7 @@
                      "-header-insertion=never"
                 ],
                 "cmake.configureArgs": [
-                    "-DFORMAT_CODE=ON"
+                    "-DFORMAT_CODE=ON", "-DWITH_SYCL=ON"
                 ],
                 "cmake.additionalKits": [
                     "/opt/sycl/cmake/cmake-kits.json"
@@ -37,5 +37,5 @@
     "mounts": [
         "source=moptim-build-cache,target=/workspaces/moptim/build,type=volume"
     ],
-    "runArgs": ["--gpus", "all", "--cap-add=SYS_ADMIN"]
+    // "runArgs": ["--gpus", "all", "--cap-add=SYS_ADMIN"] // uncomment for GPU usage
 }
