--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 include(CTest)
 
 option(USE_CLANG_TIDY "Enable clang-tidy" OFF)
-option(WITH_SYCL "Use SYCL compilation for parallel computation" ON)
+option(WITH_SYCL "Use SYCL compilation for parallel computation" OFF)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(code-format)
