--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,5 +26,10 @@
     "mounts": [
         "source=moptim-build-cache,target=/workspaces/moptim/build,type=volume"
     ],
+    "runArgs": [
+        "--cap-add=SYS_NICE",
+        "--ulimit=rtprio=99",
+        "--ulimit=memlock=-1"
+    ]
     // "runArgs": ["--gpus", "all", "--cap-add=SYS_ADMIN"] // uncomment for GPU usage
 }
