added async console logging

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(utils
     ILog.cc
+    AsyncConsoleLogger.cc
     ConsoleLogger.cc
     Timer.cc)
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
