--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,9 @@
     "runArgs": [
         "--cap-add=SYS_NICE",
         "--ulimit=rtprio=99",
-        "--ulimit=memlock=-1"
+        "--ulimit=memlock=-1",
+        // "--cpus=1",
+        // "--cpuset-cpus=0"
     ]
     // "runArgs": ["--gpus", "all", "--cap-add=SYS_ADMIN"] // uncomment for GPU usage
 }
