fixed compilation with eigen and SYCL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include(CTest)
 
 option(USE_CLANG_TIDY "Enable clang-tidy" OFF)
 option(WITH_SYCL "Use SYCL compilation for parallel computation" OFF)
+add_compile_definitions(EIGEN_ARM64_USE_SVE)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(code-format)
@@ -35,6 +36,7 @@ if(WITH_SYCL)
       message(FATAL_ERROR "SYCL compilation requires acpp compiler")
   endif()
   target_compile_options(moptim PUBLIC -fsycl -fsycl-targets=native_cpu)
+  target_link_options(moptim PUBLIC -fsycl -fsycl-targets=native_cpu)
 endif()
 target_include_directories(moptim PUBLIC include)
 target_link_libraries(moptim utils Eigen3::Eigen)
