--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include(CTest)
 
 option(USE_CLANG_TIDY "Enable clang-tidy" OFF)
 option(WITH_SYCL "Use SYCL compilation for parallel computation" OFF)
-add_compile_definitions(EIGEN_ARM64_USE_SVE)
+add_compile_definitions(EIGEN_ARM64_USE_SVE EIGEN_DONT_VECTORIZE)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(code-format)
@@ -30,13 +30,16 @@ add_library(moptim
   src/LevenbergMarquardt.cc)
 
 if(WITH_SYCL)
+  find_package(oneMath  REQUIRED)
   include(CheckCXXCompilerFlag)
   check_cxx_compiler_flag("-fsycl" COMPILER_SUPPORTS_FSYCL)
   if(NOT COMPILER_SUPPORTS_FSYCL)
       message(FATAL_ERROR "SYCL compilation requires acpp compiler")
   endif()
-  target_compile_options(moptim PUBLIC -fsycl -fsycl-targets=native_cpu)
-  target_link_options(moptim PUBLIC -fsycl -fsycl-targets=native_cpu)
+  set(SYCL_FLAGS -fsycl -fsycl-targets=nvptx64-nvidia-cuda)
+  target_compile_options(moptim PUBLIC ${SYCL_FLAGS})
+  target_link_options(moptim PUBLIC ${SYCL_FLAGS})
+  link_libraries(ONEMATH::onemath onemath_blas_generic)
 endif()
 target_include_directories(moptim PUBLIC include)
 target_link_libraries(moptim utils Eigen3::Eigen)
