oneMath is now part of the base dev container

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,12 @@ if(WITH_SYCL)
   include(CheckCXXCompilerFlag)
   check_cxx_compiler_flag("-fsycl" COMPILER_SUPPORTS_FSYCL)
   if(NOT COMPILER_SUPPORTS_FSYCL)
-      message(FATAL_ERROR "SYCL compilation requires acpp compiler")
+      message(FATAL_ERROR "SYCL compilation requires dpcpp compiler")
   endif()
-  set(SYCL_FLAGS -fsycl -fsycl-targets=nvptx64-nvidia-cuda)
+  set(SYCL_FLAGS -fsycl -fsycl-targets=native_cpu,nvptx64-nvidia-cuda,spir64)
   target_compile_options(moptim PUBLIC ${SYCL_FLAGS})
   target_link_options(moptim PUBLIC ${SYCL_FLAGS})
-  link_libraries(ONEMATH::onemath onemath_blas_generic)
+  link_libraries(ONEMATH::onemath onemath_blas_generic) # This library must have been built with the same targets of `SYCL_FLAGS`
 endif()
 target_include_directories(moptim PUBLIC include)
 target_link_libraries(moptim utils Eigen3::Eigen)
