decoupled solver from optimizer. added templated optimizer by type

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
         "--cap-add=SYS_NICE",
         "--ulimit=rtprio=99",
         "--ulimit=memlock=-1",
-        "--gpus=all"
+        // "--gpus=all"
         // "--cpus=1",
         // "--cpuset-cpus=0"
     ]
