--- a/test/nist/CMakeLists.txt
+++ b/test/nist/CMakeLists.txt
@@ -2,6 +2,7 @@ link_libraries(moptim gtest gtest_main)
 
 add_executable(nist
  chwirut1.cc
- kirby2.cc
- nelson.cc)
-
+#  kirby2.cc
+#  nelson.cc
+ )
+gtest_discover_tests(nist)
